Fix long comment UI issues (scroll shaking & comment overflow)
- Includes PR #11322
- Fixes #10984 (scrolling issues with long initial comments)
- Fixes #11324 (overflow of comment reply with long words)

--- a/client/src/components/CommentApp/main.scss
+++ b/client/src/components/CommentApp/main.scss
@@ -110,7 +110,7 @@ $box-padding: 20px;
 }
 
 .comments-list {
-  position: absolute;
+  position: relative;
   top: 20px;
   inset-inline-end: 20px;
   z-index: calc(theme('zIndex.header') + 5);
